新增预警和监管方溯源相关后端逻辑处理