@@ -15,200 +15,144 @@ import com.Zx1nggg.FAMS.modules.log.entity.AlarmRecord;
 import com.Zx1nggg.FAMS.modules.log.entity.PondFeedLog;
 import com.Zx1nggg.FAMS.modules.log.mapper.AlarmRecordMapper;
 import com.Zx1nggg.FAMS.modules.log.mapper.PondFeedLogMapper;
+import com.Zx1nggg.FAMS.modules.log.service.IAlarmRecordService;
+import com.Zx1nggg.FAMS.modules.log.vo.AlarmRecordVO;
 import com.Zx1nggg.FAMS.modules.regulator.service.IRegulatorService;
 import com.Zx1nggg.FAMS.modules.regulator.vo.*;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.YearMonth;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-/**
- * 监管方聚合业务实现
- * 注入各模块 Mapper（非 Service）做跨模块只读聚合查询，避免循环依赖
- */
 @Service
 public class RegulatorServiceImpl implements IRegulatorService {
 
     @Autowired private FarmMapper farmMapper;
     @Autowired private PondMapper pondMapper;
     @Autowired private StockingMapper stockingMapper;
-    @Autowired private HarvestRecordMapper harvestRecordMapper;
     @Autowired private PurchaseBatchMapper purchaseBatchMapper;
-    @Autowired private SupplierMapper supplierMapper;
     @Autowired private SeedlingDictMapper seedlingDictMapper;
     @Autowired private BatchGrowthLogMapper batchGrowthLogMapper;
-    @Autowired private PatrolLogMapper patrolLogMapper;
-    @Autowired private PondFeedLogMapper pondFeedLogMapper;
+    @Autowired private HarvestRecordMapper harvestRecordMapper;
     @Autowired private AlarmRecordMapper alarmRecordMapper;
     @Autowired private IotSensorDataMapper iotSensorDataMapper;
-
-    // ==================== Dashboard Stats ====================
+    @Autowired private IAlarmRecordService alarmRecordService;
+    @Autowired private SupplierMapper supplierMapper;
+    @Autowired private PatrolLogMapper patrolLogMapper;
+    @Autowired private PondFeedLogMapper pondFeedLogMapper;
 
     @Override
     public DashboardStatsVO getDashboardStats() {
         DashboardStatsVO stats = new DashboardStatsVO();
+        stats.setTotalFarms(farmMapper.selectCount(new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0)));
 
-        // 1) 入网养殖场总数（排除已逻辑删除）
-        stats.setTotalFarms(farmMapper.selectCount(
-                new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0)));
+        long totalStocked = stockingMapper.selectList(new LambdaQueryWrapper<Stocking>().eq(Stocking::getIsDeleted, 0))
+                .stream()
+                .mapToLong(item -> item.getStockedQty() == null ? 0L : item.getStockedQty())
+                .sum();
+        stats.setTotalLiveStock(totalStocked / 10000L);
 
-        // 2) 当前存栏活体总量 = SUM(stocking.stocked_qty) - 已出塘的粗略估算
-        //    存栏 = 各批次总投苗尾数合计 (以万尾为单位)
-        Long totalStocked = stockingMapper.selectList(
-                new LambdaQueryWrapper<Stocking>().eq(Stocking::getIsDeleted, 0))
-                .stream().mapToLong(s -> s.getStockedQty() != null ? s.getStockedQty() : 0).sum();
-        stats.setTotalLiveStock(totalStocked / 10000);
+        YearMonth month = YearMonth.now();
+        stats.setMonthlyCertificates(purchaseBatchMapper.selectCount(new LambdaQueryWrapper<PurchaseBatch>()
+                .ge(PurchaseBatch::getBatchStatus, (byte) 1)
+                .ge(PurchaseBatch::getPurchaseDate, month.atDay(1))
+                .le(PurchaseBatch::getPurchaseDate, month.atEndOfMonth())));
 
-        // 3) 本月检疫证明数 = 本月创建且 batch_status >= 1 的采购批次
-        YearMonth thisMonth = YearMonth.now();
-        LocalDateTime monthStart = thisMonth.atDay(1).atStartOfDay();
-        LocalDateTime monthEnd = thisMonth.atEndOfMonth().atTime(23, 59, 59);
-        stats.setMonthlyCertificates(purchaseBatchMapper.selectCount(
-                new LambdaQueryWrapper<PurchaseBatch>()
-                        .ge(PurchaseBatch::getBatchStatus, 1)
-                        .ge(PurchaseBatch::getPurchaseDate, monthStart.toLocalDate())
-                        .le(PurchaseBatch::getPurchaseDate, monthEnd.toLocalDate())));
-
-        // 4) 活动告警场区数（待确认、已确认、处理中）
-        List<AlarmRecord> unhandledAlarms = alarmRecordMapper.selectList(
-                new LambdaQueryWrapper<AlarmRecord>()
-                        .in(AlarmRecord::getStatus, 0, 1, 2));
-        stats.setUnhandledAlertFarms(unhandledAlarms.stream()
-                .map(AlarmRecord::getFarmId).filter(Objects::nonNull).distinct().count());
-
+        List<AlarmRecord> active = alarmRecordMapper.selectList(new LambdaQueryWrapper<AlarmRecord>().in(AlarmRecord::getStatus, 0, 1, 2));
+        stats.setUnhandledAlertFarms(active.stream().map(AlarmRecord::getFarmId).filter(Objects::nonNull).distinct().count());
         return stats;
     }
 
-    // ==================== Dashboard Alerts ====================
-
     @Override
     public List<DashboardAlertVO> getDashboardAlerts(Integer limit) {
-        if (limit == null || limit <= 0) limit = 5;
-
-        LambdaQueryWrapper<AlarmRecord> wrapper = new LambdaQueryWrapper<>();
-        wrapper.in(AlarmRecord::getStatus, 0, 1, 2)
+        int size = limit == null || limit <= 0 ? 5 : limit;
+        List<AlarmRecord> alarms = alarmRecordMapper.selectList(new LambdaQueryWrapper<AlarmRecord>()
+                .in(AlarmRecord::getStatus, 0, 1, 2)
                 .orderByDesc(AlarmRecord::getSeverity)
                 .orderByDesc(AlarmRecord::getLastOccurredAt)
-                .last("LIMIT " + limit);
+                .last("LIMIT " + size));
 
-        List<AlarmRecord> alarms = alarmRecordMapper.selectList(wrapper);
-        List<DashboardAlertVO> result = new ArrayList<>();
-        for (AlarmRecord a : alarms) {
+        return alarms.stream().map(alarm -> {
             DashboardAlertVO vo = new DashboardAlertVO();
-            vo.setAlarmId(a.getId());
-            vo.setFarmId(a.getFarmId());
-            vo.setPondId(a.getPondId());
-            vo.setAlarmCode(a.getAlarmCode());
-            vo.setTitle(a.getTitle());
-            vo.setMessage(a.getMessage());
-            vo.setSeverity(a.getSeverity());
-            vo.setStatus(a.getStatus());
-            vo.setOccurrenceCount(a.getOccurrenceCount());
-            vo.setLastOccurredAt(a.getLastOccurredAt());
-            // fill farm name
-            if (a.getFarmId() != null) {
-                Farm farm = farmMapper.selectById(a.getFarmId());
-                vo.setFarmName(farm != null ? farm.getFarmName() : "未知养殖场");
-            } else {
-                vo.setFarmName("—");
-            }
-            result.add(vo);
-        }
-        return result;
+            vo.setAlarmId(alarm.getId());
+            vo.setFarmId(alarm.getFarmId());
+            vo.setPondId(alarm.getPondId());
+            vo.setAlarmCode(alarm.getAlarmCode());
+            vo.setTitle(alarm.getTitle());
+            vo.setMessage(alarm.getMessage());
+            vo.setSeverity(alarm.getSeverity());
+            vo.setStatus(alarm.getStatus());
+            vo.setOccurrenceCount(alarm.getOccurrenceCount());
+            vo.setLastOccurredAt(alarm.getLastOccurredAt());
+            Farm farm = alarm.getFarmId() == null ? null : farmMapper.selectById(alarm.getFarmId());
+            vo.setFarmName(farm == null ? "未知养殖场" : farm.getFarmName());
+            return vo;
+        }).toList();
     }
-
-    // ==================== Dashboard Watchlist ====================
 
     @Override
     public List<DashboardWatchlistVO> getDashboardWatchlist(Integer limit) {
-        if (limit == null || limit <= 0) limit = 10;
+        int size = limit == null || limit <= 0 ? 10 : limit;
+        LocalDateTime since = LocalDateTime.now().minusDays(30);
+        List<Farm> farms = farmMapper.selectList(new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0));
+        List<DashboardWatchlistVO> result = new ArrayList<>();
 
-        LocalDateTime thirtyDaysAgo = LocalDateTime.now().minusDays(30);
-
-        // 查询所有未删除的养殖场
-        List<Farm> farms = farmMapper.selectList(
-                new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0));
-
-        List<DashboardWatchlistVO> watchlist = new ArrayList<>();
         for (Farm farm : farms) {
-            // 统计近30天仍有触发的告警事件
-            Long alarmCount = alarmRecordMapper.selectCount(
-                    new LambdaQueryWrapper<AlarmRecord>()
-                            .eq(AlarmRecord::getFarmId, farm.getId())
-                            .ge(AlarmRecord::getLastOccurredAt, thirtyDaysAgo));
+            Long alarmCount = alarmRecordMapper.selectCount(new LambdaQueryWrapper<AlarmRecord>()
+                    .eq(AlarmRecord::getFarmId, farm.getId())
+                    .ge(AlarmRecord::getLastOccurredAt, since));
+            int abnormalDeaths = countRecentAbnormalDeaths(farm.getId(), since.toLocalDate());
+            if (alarmCount <= 0 && abnormalDeaths <= 0) continue;
 
-            // 异常死亡记录必须按当前养殖场的池塘隔离
-            List<Long> farmPondIds = pondMapper.selectList(
-                            new LambdaQueryWrapper<Pond>()
-                                    .eq(Pond::getFarmId, farm.getId())
-                                    .eq(Pond::getIsDeleted, 0))
-                    .stream().map(Pond::getId).filter(Objects::nonNull).toList();
-            List<BatchGrowthLog> growthLogs = farmPondIds.isEmpty()
-                    ? List.of()
-                    : batchGrowthLogMapper.selectList(
-                            new LambdaQueryWrapper<BatchGrowthLog>()
-                                    .in(BatchGrowthLog::getPondId, farmPondIds)
-                                    .ge(BatchGrowthLog::getLogDate, thirtyDaysAgo.toLocalDate())
-                                    .gt(BatchGrowthLog::getAbnormalDeathCount, 0));
-
-            int totalAbnormalDeaths = growthLogs.stream()
-                    .mapToInt(g -> g.getAbnormalDeathCount() != null ? g.getAbnormalDeathCount() : 0)
-                    .sum();
-
-            // 综合风险评分：告警数*3 + 异常死亡多次
-            if (alarmCount > 0 || totalAbnormalDeaths > 0) {
-                DashboardWatchlistVO vo = new DashboardWatchlistVO();
-                vo.setFarmId(farm.getId());
-                vo.setFarmName(farm.getFarmName());
-                vo.setAlarmCount(alarmCount.intValue());
-
-                if (totalAbnormalDeaths > 100) {
-                    vo.setRiskType("死亡率异常");
-                    vo.setRiskDescription("近30天累计异常死亡 " + totalAbnormalDeaths + " 尾，死亡率呈上升趋势");
-                    vo.setRiskMetric(totalAbnormalDeaths + "尾");
-                } else if (alarmCount >= 5) {
-                    vo.setRiskType("环境异常");
-                    vo.setRiskDescription("近30天累计触发 " + alarmCount + " 次告警，建议重点关注");
-                    vo.setRiskMetric(alarmCount + "次");
-                } else if (alarmCount > 0) {
-                    vo.setRiskType("违规操作");
-                    vo.setRiskDescription("近30天存在 " + alarmCount + " 个告警事件");
-                    vo.setRiskMetric(alarmCount + "次");
-                } else {
-                    vo.setRiskType("环境异常");
-                    vo.setRiskDescription("近30天累计异常死亡 " + totalAbnormalDeaths + " 尾");
-                    vo.setRiskMetric(totalAbnormalDeaths + "尾");
-                }
-                watchlist.add(vo);
+            DashboardWatchlistVO vo = new DashboardWatchlistVO();
+            vo.setFarmId(farm.getId());
+            vo.setFarmName(farm.getFarmName());
+            vo.setAlarmCount(alarmCount.intValue());
+            if (abnormalDeaths > 100) {
+                vo.setRiskType("死亡率异常");
+                vo.setRiskDescription("近30天累计异常死亡 " + abnormalDeaths + " 尾，建议重点核查养殖环境与用药记录");
+                vo.setRiskMetric(abnormalDeaths + "尾");
+            } else if (alarmCount >= 5) {
+                vo.setRiskType("环境异常");
+                vo.setRiskDescription("近30天累计触发 " + alarmCount + " 次告警，水质或生产环境波动频繁");
+                vo.setRiskMetric(alarmCount + "次");
+            } else {
+                vo.setRiskType("违规操作");
+                vo.setRiskDescription("近30天存在未闭环风险事件，建议监管员跟进处理记录");
+                vo.setRiskMetric(alarmCount + "次");
             }
+            result.add(vo);
         }
 
-        // 按告警数+异常死亡数排序 (降序)
-        watchlist.sort((a, b) -> {
-            int scoreA = a.getAlarmCount() * 3;
-            int scoreB = b.getAlarmCount() * 3;
-            return Integer.compare(scoreB, scoreA);
-        });
-
-        return watchlist.stream().limit(limit).collect(Collectors.toList());
+        result.sort((a, b) -> Integer.compare(b.getAlarmCount(), a.getAlarmCount()));
+        return result.stream().limit(size).toList();
     }
-
-    // ==================== GIS Farms Geo ====================
 
     @Override
     public List<FarmGeoVO> getFarmsGeo() {
-        List<Farm> farms = farmMapper.selectList(
-                new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0));
-
+        List<Farm> farms = farmMapper.selectList(new LambdaQueryWrapper<Farm>().eq(Farm::getIsDeleted, 0));
         List<FarmGeoVO> result = new ArrayList<>();
         for (Farm farm : farms) {
+            List<Pond> ponds = pondMapper.selectList(new LambdaQueryWrapper<Pond>()
+                    .eq(Pond::getFarmId, farm.getId())
+                    .eq(Pond::getIsDeleted, 0));
+            List<AlarmRecord> activeAlarms = alarmRecordMapper.selectList(new LambdaQueryWrapper<AlarmRecord>()
+                    .eq(AlarmRecord::getFarmId, farm.getId())
+                    .in(AlarmRecord::getStatus, 0, 1, 2));
+
             FarmGeoVO vo = new FarmGeoVO();
             vo.setFarmId(farm.getId());
             vo.setFarmName(farm.getFarmName());
@@ -216,358 +160,398 @@ public class RegulatorServiceImpl implements IRegulatorService {
             vo.setLatitude(farm.getLatitude());
             vo.setAddress(farm.getAddress());
             vo.setProvince(extractProvince(farm.getAddress(), farm.getFarmName()));
-
-            // 下属池塘：后续存栏计算必须限定在当前养殖场范围内
-            List<Pond> farmPonds = pondMapper.selectList(
-                    new LambdaQueryWrapper<Pond>()
-                            .eq(Pond::getFarmId, farm.getId())
-                            .eq(Pond::getIsDeleted, 0));
-            vo.setPondCount(farmPonds.size());
-            Set<Long> pondIds = farmPonds.stream()
-                    .map(Pond::getId)
-                    .filter(Objects::nonNull)
-                    .collect(Collectors.toSet());
-
-            // 活动告警数和状态
-            List<AlarmRecord> farmAlarms = alarmRecordMapper.selectList(
-                    new LambdaQueryWrapper<AlarmRecord>()
-                            .eq(AlarmRecord::getFarmId, farm.getId())
-                            .in(AlarmRecord::getStatus, 0, 1, 2));
-            vo.setActiveAlarmCount(farmAlarms.size());
-
-            // 告警状态判定
-            long criticalCount = farmAlarms.stream()
-                    .filter(a -> a.getSeverity() != null && a.getSeverity() == 3).count();
-            if (criticalCount > 0) {
-                vo.setAlertStatus("critical");
-            } else if (!farmAlarms.isEmpty()) {
-                vo.setAlertStatus("warning");
-            } else {
-                vo.setAlertStatus("normal");
-            }
-
-            // 当前存栏 = 养殖中批次的实际投放尾数 - 对应批次累计死亡尾数
-            long currentStockCount = 0L;
-            if (!pondIds.isEmpty()) {
-                List<PurchaseBatch> activeBatches = purchaseBatchMapper.selectList(
-                        new LambdaQueryWrapper<PurchaseBatch>()
-                                .eq(PurchaseBatch::getFarmId, farm.getId())
-                                .eq(PurchaseBatch::getBatchStatus, (byte) 2));
-                Set<Long> activeBatchIds = activeBatches.stream()
-                        .map(PurchaseBatch::getId)
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toSet());
-
-                if (!activeBatchIds.isEmpty()) {
-                    List<Stocking> stockings = stockingMapper.selectList(
-                            new LambdaQueryWrapper<Stocking>()
-                                    .in(Stocking::getPondId, pondIds)
-                                    .in(Stocking::getBatchId, activeBatchIds)
-                                    .eq(Stocking::getIsDeleted, 0));
-                    long stockedCount = stockings.stream()
-                            .mapToLong(s -> s.getStockedQty() != null ? s.getStockedQty() : 0)
-                            .sum();
-
-                    Set<Long> stockedBatchIds = stockings.stream()
-                            .map(Stocking::getBatchId)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toSet());
-                    List<PurchaseBatch> stockedBatches = activeBatches.stream()
-                            .filter(batch -> stockedBatchIds.contains(batch.getId()))
-                            .toList();
-
-                    // 主要品种仅取当前实际在养且已投放的批次
-                    Set<String> species = new LinkedHashSet<>();
-                    for (PurchaseBatch batch : stockedBatches) {
-                        if (batch.getSeedlingId() == null) continue;
-                        SeedlingDict seedling = seedlingDictMapper.selectById(batch.getSeedlingId());
-                        if (seedling != null && seedling.getCategoryName() != null) {
-                            species.add(seedling.getCategoryName());
-                        }
-                    }
-                    vo.setMainSpecies(String.join("、", species));
-
-                    Set<String> activeBatchNos = stockedBatches.stream()
-                            .map(PurchaseBatch::getBatchNo)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toSet());
-                    long deathCount = 0L;
-                    if (!activeBatchNos.isEmpty()) {
-                        List<BatchGrowthLog> growthLogs = batchGrowthLogMapper.selectList(
-                                new LambdaQueryWrapper<BatchGrowthLog>()
-                                        .in(BatchGrowthLog::getPondId, pondIds)
-                                        .in(BatchGrowthLog::getBatchNo, activeBatchNos));
-                        deathCount = growthLogs.stream().mapToLong(log ->
-                                (log.getRoutineDeathCount() != null ? log.getRoutineDeathCount() : 0L)
-                                        + (log.getAbnormalDeathCount() != null ? log.getAbnormalDeathCount() : 0L))
-                                .sum();
-                    }
-                    currentStockCount = Math.max(0L, stockedCount - deathCount);
-                }
-            }
-            // stockCount 是原始尾数；stockAmount 保留“万尾”语义兼容旧调用
-            vo.setStockCount(currentStockCount);
-            vo.setStockAmount(currentStockCount / 10000);
-
+            vo.setPondCount(ponds.size());
+            vo.setActiveAlarmCount(activeAlarms.size());
+            boolean critical = activeAlarms.stream().anyMatch(item -> Objects.equals(item.getSeverity(), (byte) 3));
+            vo.setAlertStatus(critical ? "critical" : activeAlarms.isEmpty() ? "normal" : "warning");
+            long stock = currentStockCount(farm.getId(), ponds);
+            vo.setStockCount(stock);
+            vo.setStockAmount(stock / 10000L);
+            vo.setMainSpecies(mainSpecies(farm.getId()));
             result.add(vo);
         }
         return result;
     }
 
-    // ==================== Trace ====================
-
     @Override
     public TraceChainVO quickTrace(String keyword) {
-        if (keyword == null || keyword.isBlank()) {
-            throw new BusinessException(400, "请输入批次号或溯源码");
+        if (keyword == null || keyword.isBlank()) throw new BusinessException(400, "keyword is required");
+        PurchaseBatch batch = purchaseBatchMapper.selectOne(new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, keyword));
+        if (batch == null) {
+            HarvestRecord harvest = harvestRecordMapper.selectOne(new LambdaQueryWrapper<HarvestRecord>()
+                    .like(HarvestRecord::getTraceQrCodeUrl, keyword)
+                    .eq(HarvestRecord::getIsDeleted, 0)
+                    .last("LIMIT 1"));
+            if (harvest != null) {
+                batch = purchaseBatchMapper.selectOne(new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, harvest.getBatchNo()));
+            }
         }
-
-        // 1) 先按 batch_no 精确匹配
-        PurchaseBatch batch = purchaseBatchMapper.selectOne(
-                new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, keyword));
-        if (batch != null) {
-            return buildTraceChain(batch);
+        if (batch == null) {
+            batch = purchaseBatchMapper.selectOne(new LambdaQueryWrapper<PurchaseBatch>().like(PurchaseBatch::getBatchNo, keyword).last("LIMIT 1"));
         }
-
-        // 2) 按 harvest_record 的 trace_qr_code_url 模糊匹配
-        HarvestRecord harvest = harvestRecordMapper.selectOne(
-                new LambdaQueryWrapper<HarvestRecord>()
-                        .like(HarvestRecord::getTraceQrCodeUrl, keyword)
-                        .eq(HarvestRecord::getIsDeleted, 0)
-                        .last("LIMIT 1"));
-        if (harvest != null) {
-            batch = purchaseBatchMapper.selectOne(
-                    new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, harvest.getBatchNo()));
-            if (batch != null) return buildTraceChain(batch);
-        }
-
-        // 3) 按 purchase_batch 模糊匹配 batch_no
-        batch = purchaseBatchMapper.selectOne(
-                new LambdaQueryWrapper<PurchaseBatch>()
-                        .like(PurchaseBatch::getBatchNo, keyword)
-                        .last("LIMIT 1"));
-        if (batch != null) {
-            return buildTraceChain(batch);
-        }
-
-        throw new BusinessException(404, "未找到该批次/溯源码的追溯信息");
+        if (batch == null) throw new BusinessException(404, "trace batch not found");
+        return buildTraceChain(batch);
     }
 
     @Override
     public TraceChainVO getTraceDetail(String batchNo) {
-        if (batchNo == null || batchNo.isBlank()) {
-            throw new BusinessException(400, "批次号不能为空");
-        }
-        PurchaseBatch batch = purchaseBatchMapper.selectOne(
-                new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, batchNo));
-        if (batch == null) {
-            throw new BusinessException(404, "未找到批次 " + batchNo);
-        }
+        if (batchNo == null || batchNo.isBlank()) throw new BusinessException(400, "batchNo is required");
+        PurchaseBatch batch = purchaseBatchMapper.selectOne(new LambdaQueryWrapper<PurchaseBatch>().eq(PurchaseBatch::getBatchNo, batchNo));
+        if (batch == null) throw new BusinessException(404, "trace batch not found");
         return buildTraceChain(batch);
     }
 
-    /**
-     * 根据采购批次构建完整追溯链
-     */
+    @Override
+    public AlertStatsVO getAlertStats() {
+        List<AlarmRecord> alarms = alarmRecordMapper.selectList(null);
+        LocalDate today = LocalDate.now();
+        AlertStatsVO stats = new AlertStatsVO();
+        stats.setTotalCount((long) alarms.size());
+        stats.setActiveCount(alarms.stream().filter(a -> isActiveStatus(a.getStatus())).count());
+        stats.setPendingCount(alarms.stream().filter(a -> Objects.equals(a.getStatus(), (byte) 0)).count());
+        stats.setProcessingCount(alarms.stream().filter(a -> Objects.equals(a.getStatus(), (byte) 2)).count());
+        stats.setResolvedCount(alarms.stream().filter(a -> Objects.equals(a.getStatus(), (byte) 3)).count());
+        stats.setCriticalCount(alarms.stream().filter(a -> Objects.equals(a.getSeverity(), (byte) 3)).count());
+        stats.setTodayNewCount(alarms.stream()
+                .filter(a -> a.getCreatedAt() != null && a.getCreatedAt().toLocalDate().equals(today))
+                .count());
+        stats.setByType(alarms.stream().collect(Collectors.groupingBy(
+                a -> a.getSourceType() == null ? "UNKNOWN" : a.getSourceType(), LinkedHashMap::new, Collectors.counting())));
+        stats.setByLevel(alarms.stream().collect(Collectors.groupingBy(
+                a -> a.getSeverity() == null ? "0" : String.valueOf(a.getSeverity()), LinkedHashMap::new, Collectors.counting())));
+        return stats;
+    }
+
+    @Override
+    public Page<AlarmRecordVO> listAlerts(Integer pageNum, Integer pageSize, Long farmId, Byte severity,
+                                          Byte status, String sourceType, LocalDate startDate, LocalDate endDate) {
+        int current = pageNum == null || pageNum <= 0 ? 1 : pageNum;
+        int size = pageSize == null || pageSize <= 0 ? 10 : pageSize;
+        LambdaQueryWrapper<AlarmRecord> wrapper = new LambdaQueryWrapper<>();
+        if (farmId != null) wrapper.eq(AlarmRecord::getFarmId, farmId);
+        if (severity != null) wrapper.eq(AlarmRecord::getSeverity, severity);
+        if (status != null) wrapper.eq(AlarmRecord::getStatus, status);
+        if (sourceType != null && !sourceType.isBlank()) wrapper.eq(AlarmRecord::getSourceType, sourceType);
+        if (startDate != null) wrapper.ge(AlarmRecord::getCreatedAt, startDate.atStartOfDay());
+        if (endDate != null) wrapper.le(AlarmRecord::getCreatedAt, endDate.plusDays(1).atStartOfDay().minusNanos(1));
+        wrapper.orderByAsc(AlarmRecord::getStatus)
+                .orderByDesc(AlarmRecord::getSeverity)
+                .orderByDesc(AlarmRecord::getLastOccurredAt);
+
+        Page<AlarmRecord> page = alarmRecordMapper.selectPage(new Page<>(current, size), wrapper);
+        Page<AlarmRecordVO> voPage = new Page<>(page.getCurrent(), page.getSize(), page.getTotal());
+        voPage.setRecords(page.getRecords().stream().map(this::toAlarmRecordVO).toList());
+        return voPage;
+    }
+
+    @Override
+    public List<AlertTrendVO> getAlertTrend(Integer days) {
+        int range = days == null || days <= 0 ? 30 : Math.min(days, 180);
+        LocalDate start = LocalDate.now().minusDays(range - 1L);
+        List<AlarmRecord> alarms = alarmRecordMapper.selectList(new LambdaQueryWrapper<AlarmRecord>()
+                        .ge(AlarmRecord::getCreatedAt, start.atStartOfDay()))
+                .stream()
+                .filter(a -> a.getCreatedAt() != null)
+                .toList();
+        Map<LocalDate, List<AlarmRecord>> byDate = alarms.stream().collect(Collectors.groupingBy(a -> a.getCreatedAt().toLocalDate()));
+
+        List<AlertTrendVO> result = new ArrayList<>();
+        for (int i = 0; i < range; i++) {
+            LocalDate date = start.plusDays(i);
+            List<AlarmRecord> dayAlarms = byDate.getOrDefault(date, List.of());
+            AlertTrendVO vo = new AlertTrendVO();
+            vo.setDate(date.toString());
+            vo.setTotalCount(dayAlarms.size());
+            vo.setCriticalCount((int) dayAlarms.stream().filter(a -> Objects.equals(a.getSeverity(), (byte) 3)).count());
+            vo.setWarningCount((int) dayAlarms.stream().filter(a -> Objects.equals(a.getSeverity(), (byte) 2)).count());
+            vo.setInfoCount((int) dayAlarms.stream().filter(a -> Objects.equals(a.getSeverity(), (byte) 1)).count());
+            result.add(vo);
+        }
+        return result;
+    }
+
+    @Override
+    public List<IotRealtimeAlertVO> getIotRealtimeAlerts() {
+        List<Pond> ponds = pondMapper.selectList(new LambdaQueryWrapper<Pond>().eq(Pond::getIsDeleted, 0));
+        List<IotRealtimeAlertVO> result = new ArrayList<>();
+        for (Pond pond : ponds) {
+            IotSensorData latest = iotSensorDataMapper.selectOne(new LambdaQueryWrapper<IotSensorData>()
+                    .eq(IotSensorData::getPondId, pond.getId())
+                    .orderByDesc(IotSensorData::getCollectTime)
+                    .last("LIMIT 1"));
+            if (latest == null) continue;
+            Farm farm = pond.getFarmId() == null ? null : farmMapper.selectById(pond.getFarmId());
+            addIotAlertIfNeeded(result, pond, farm, latest, "waterTemp", latest.getWaterTemp(), null, bd("35.0"));
+            addIotAlertIfNeeded(result, pond, farm, latest, "doLevel", latest.getDissolvedOxygen(), bd("3.5"), null);
+            addIotAlertIfNeeded(result, pond, farm, latest, "phLevel", latest.getPhValue(), bd("6.5"), bd("9.0"));
+        }
+        result.sort((a, b) -> {
+            if (a.getDataTime() == null && b.getDataTime() == null) return 0;
+            if (a.getDataTime() == null) return 1;
+            if (b.getDataTime() == null) return -1;
+            return b.getDataTime().compareTo(a.getDataTime());
+        });
+        return result;
+    }
+
+    @Override
+    public void handleAlert(Long id, Byte status, String remark) {
+        if (status == null) throw new BusinessException(400, "status is required");
+        switch (status) {
+            case 0 -> alarmRecordService.reopen(id, remark);
+            case 1 -> alarmRecordService.acknowledge(id, remark);
+            case 2 -> alarmRecordService.startProcessing(id, remark);
+            case 3 -> alarmRecordService.resolve(id, remark);
+            case 4 -> alarmRecordService.close(id, remark);
+            default -> throw new BusinessException(400, "unsupported status: " + status);
+        }
+    }
+
     private TraceChainVO buildTraceChain(PurchaseBatch batch) {
         TraceChainVO chain = new TraceChainVO();
         chain.setBatchNo(batch.getBatchNo());
+        chain.setSeedlingName(seedlingName(batch.getSeedlingId()));
         List<TraceNodeVO> nodes = new ArrayList<>();
 
-        // fill seedling name
-        if (batch.getSeedlingId() != null) {
-            SeedlingDict sd = seedlingDictMapper.selectById(batch.getSeedlingId());
-            chain.setSeedlingName(sd != null ? sd.getCategoryName() : "未知品种");
-        }
-
-        // Node 1: Supplier (苗种来源)
         if (batch.getSupplierId() != null) {
             Supplier supplier = supplierMapper.selectById(batch.getSupplierId());
             if (supplier != null) {
-                TraceNodeVO node = new TraceNodeVO();
-                node.setNodeType("supplier");
-                node.setNodeName("苗种来源");
-                node.setNodeTime(supplier.getCreateTime());
                 Map<String, Object> detail = new LinkedHashMap<>();
                 detail.put("供应商名称", supplier.getSupplierName());
                 detail.put("联系人", supplier.getContactPerson());
                 detail.put("联系电话", supplier.getContactPhone());
                 detail.put("许可证号", supplier.getQualificationCode());
-                node.setDetail(detail);
-                nodes.add(node);
+                nodes.add(traceNode("supplier", "苗种来源", supplier.getCreateTime(), detail));
             }
         }
 
-        // Node 2: Purchase (采购批次)
-        {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("purchase");
-            node.setNodeName("苗种采购");
-            node.setNodeTime(batch.getPurchaseDate() != null
-                    ? batch.getPurchaseDate().atStartOfDay() : null);
+        Map<String, Object> purchase = new LinkedHashMap<>();
+        purchase.put("批次号", batch.getBatchNo());
+        purchase.put("采购日期", batch.getPurchaseDate());
+        purchase.put("采购件数", safe(batch.getUnitQty()) + " " + safe(batch.getPurchaseUnit()));
+        purchase.put("每件密度", safe(batch.getDensityPerUnit()) + " 尾/" + safe(batch.getPurchaseUnit()));
+        purchase.put("预计总尾数", batch.getEstimatedTotalQty());
+        purchase.put("单价", batch.getUnitPrice() == null ? "-" : batch.getUnitPrice() + " 元/" + safe(batch.getPurchaseUnit()));
+        purchase.put("总金额", batch.getTotalAmount() == null ? "-" : batch.getTotalAmount() + " 元");
+        purchase.put("检疫证号", batch.getQuarantineCertNo());
+        purchase.put("批次状态", batchStatusLabel(batch.getBatchStatus()));
+        nodes.add(traceNode("purchase", "苗种采购", batch.getPurchaseDate() == null ? null : batch.getPurchaseDate().atStartOfDay(), purchase));
+
+        List<Stocking> stockings = stockingMapper.selectList(new LambdaQueryWrapper<Stocking>()
+                .eq(Stocking::getBatchId, batch.getId())
+                .eq(Stocking::getIsDeleted, 0));
+        for (Stocking stocking : stockings) {
             Map<String, Object> detail = new LinkedHashMap<>();
-            detail.put("批次号", batch.getBatchNo());
-            detail.put("采购日期", batch.getPurchaseDate());
-            detail.put("包装件数", batch.getUnitQty() + " " + (batch.getPurchaseUnit() != null ? batch.getPurchaseUnit() : ""));
-            detail.put("每件密度", batch.getDensityPerUnit() + " 尾/" + batch.getPurchaseUnit());
-            detail.put("预估总尾数", batch.getEstimatedTotalQty());
-            detail.put("单价", batch.getUnitPrice() + " 元/" + batch.getPurchaseUnit());
-            detail.put("总金额", batch.getTotalAmount() + " 元");
-            detail.put("检疫证号", batch.getQuarantineCertNo());
-            detail.put("批次状态", batchStatusLabel(batch.getBatchStatus()));
-            node.setDetail(detail);
-            nodes.add(node);
+            Pond pond = stocking.getPondId() == null ? null : pondMapper.selectById(stocking.getPondId());
+            detail.put("投放池塘", pond == null ? "ID:" + stocking.getPondId() : pond.getPondName());
+            detail.put("投放件数", safe(stocking.getStockedUnits()) + " 件");
+            detail.put("投放尾数", safe(stocking.getStockedQty()) + " 尾");
+            detail.put("投放总重", stocking.getStockedWeight() == null ? "-" : stocking.getStockedWeight() + " kg");
+            detail.put("投放日期", stocking.getStockingDate());
+            detail.put("备注", blankToDash(stocking.getRemark()));
+            nodes.add(traceNode("stocking", "投放登记", stocking.getStockingDate() == null ? stocking.getCreateTime() : stocking.getStockingDate().atStartOfDay(), detail));
         }
 
-        // Node 3: Stocking (投放登记)
-        List<Stocking> stockings = stockingMapper.selectList(
-                new LambdaQueryWrapper<Stocking>()
-                        .eq(Stocking::getBatchId, batch.getId())
-                        .eq(Stocking::getIsDeleted, 0));
-        for (Stocking s : stockings) {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("stocking");
-            node.setNodeName("投放登记");
-            node.setNodeTime(s.getStockingDate() != null
-                    ? s.getStockingDate().atStartOfDay() : s.getCreateTime());
+        List<BatchGrowthLog> growthLogs = batchGrowthLogMapper.selectList(new LambdaQueryWrapper<BatchGrowthLog>()
+                .eq(BatchGrowthLog::getBatchNo, batch.getBatchNo())
+                .orderByAsc(BatchGrowthLog::getLogDate));
+        for (BatchGrowthLog growth : growthLogs) {
             Map<String, Object> detail = new LinkedHashMap<>();
-            // pond name
-            if (s.getPondId() != null) {
-                Pond pond = pondMapper.selectById(s.getPondId());
-                detail.put("投放池塘", pond != null ? pond.getPondName() : "ID:" + s.getPondId());
+            Pond pond = growth.getPondId() == null ? null : pondMapper.selectById(growth.getPondId());
+            detail.put("池塘", pond == null ? "-" : pond.getPondName());
+            detail.put("抽测日期", growth.getLogDate());
+            detail.put("均长", growth.getAvgLength() == null ? "-" : growth.getAvgLength() + " cm");
+            detail.put("均重", growth.getAvgWeight() == null ? "-" : growth.getAvgWeight() + " g");
+            detail.put("日常死亡", safe(growth.getRoutineDeathCount()) + " 尾");
+            detail.put("异常死亡", safe(growth.getAbnormalDeathCount()) + " 尾");
+            if (growth.getAbnormalReason() != null && !growth.getAbnormalReason().isBlank()) {
+                detail.put("异常原因", growth.getAbnormalReason());
             }
-            detail.put("投放件数", s.getStockedUnits() + " 件");
-            detail.put("投放尾数", s.getStockedQty() + " 尾");
-            detail.put("投放总重", s.getStockedWeight() != null ? s.getStockedWeight() + " kg" : "—");
-            detail.put("投放日期", s.getStockingDate());
-            detail.put("备注", s.getRemark() != null ? s.getRemark() : "—");
-            node.setDetail(detail);
-            nodes.add(node);
+            nodes.add(traceNode("growth", "成长抽测记录", growth.getLogDate() == null ? null : growth.getLogDate().atStartOfDay(), detail));
         }
 
-        // Node 4: Growth Logs (成长抽测)
-        List<BatchGrowthLog> growthLogs = batchGrowthLogMapper.selectList(
-                new LambdaQueryWrapper<BatchGrowthLog>()
-                        .eq(BatchGrowthLog::getBatchNo, batch.getBatchNo())
-                        .orderByAsc(BatchGrowthLog::getLogDate));
-        for (BatchGrowthLog g : growthLogs) {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("growth");
-            node.setNodeName("成长抽测记录");
-            node.setNodeTime(g.getLogDate() != null
-                    ? g.getLogDate().atStartOfDay() : null);
+        List<PatrolLog> patrolLogs = patrolLogMapper.selectList(new LambdaQueryWrapper<PatrolLog>()
+                .eq(PatrolLog::getBatchNo, batch.getBatchNo())
+                .eq(PatrolLog::getIsDeleted, 0)
+                .orderByAsc(PatrolLog::getPatrolTime));
+        for (PatrolLog patrol : patrolLogs) {
             Map<String, Object> detail = new LinkedHashMap<>();
-            detail.put("抽测日期", g.getLogDate());
-            if (g.getPondId() != null) {
-                Pond pond = pondMapper.selectById(g.getPondId());
-                detail.put("池塘", pond != null ? pond.getPondName() : "—");
-            }
-            detail.put("均长", g.getAvgLength() != null ? g.getAvgLength() + " cm" : "—");
-            detail.put("均重", g.getAvgWeight() != null ? g.getAvgWeight() + " g" : "—");
-            detail.put("日常损耗", g.getRoutineDeathCount() + " 尾");
-            detail.put("异常死亡", g.getAbnormalDeathCount() != null ? g.getAbnormalDeathCount() + " 尾" : "0 尾");
-            if (g.getAbnormalReason() != null) {
-                detail.put("异常原因", g.getAbnormalReason());
-            }
-            node.setDetail(detail);
-            nodes.add(node);
+            Pond pond = patrol.getPondId() == null ? null : pondMapper.selectById(patrol.getPondId());
+            detail.put("池塘", pond == null ? "-" : pond.getPondName());
+            detail.put("巡塘时间", patrol.getPatrolTime());
+            detail.put("天气", blankToDash(patrol.getWeather()));
+            detail.put("水温", patrol.getWaterTemp() == null ? "-" : patrol.getWaterTemp() + " °C");
+            detail.put("水色", blankToDash(patrol.getWaterColor()));
+            detail.put("备注", blankToDash(patrol.getRemark()));
+            nodes.add(traceNode("patrol", "巡塘记录", patrol.getPatrolTime(), detail));
         }
 
-        // Node 5: Patrol Logs (巡塘记录)
-        List<PatrolLog> patrolLogs = patrolLogMapper.selectList(
-                new LambdaQueryWrapper<PatrolLog>()
-                        .eq(PatrolLog::getBatchNo, batch.getBatchNo())
-                        .eq(PatrolLog::getIsDeleted, 0)
-                        .orderByAsc(PatrolLog::getPatrolTime));
-        for (PatrolLog p : patrolLogs) {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("patrol");
-            node.setNodeName("巡塘记录");
-            node.setNodeTime(p.getPatrolTime());
-            Map<String, Object> detail = new LinkedHashMap<>();
-            if (p.getPondId() != null) {
-                Pond pond = pondMapper.selectById(p.getPondId());
-                detail.put("池塘", pond != null ? pond.getPondName() : "—");
+        Set<Long> patrolIds = patrolLogs.stream()
+                .map(PatrolLog::getId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        if (!patrolIds.isEmpty()) {
+            List<PondFeedLog> feedLogs = pondFeedLogMapper.selectList(new LambdaQueryWrapper<PondFeedLog>()
+                    .in(PondFeedLog::getPatrolLogId, patrolIds)
+                    .orderByAsc(PondFeedLog::getLogDate));
+            for (PondFeedLog feed : feedLogs) {
+                Map<String, Object> detail = new LinkedHashMap<>();
+                Pond pond = feed.getPondId() == null ? null : pondMapper.selectById(feed.getPondId());
+                detail.put("池塘", pond == null ? "-" : pond.getPondName());
+                detail.put("操作日期", feed.getLogDate());
+                detail.put("饲料品牌", blankToDash(feed.getFeedBrand()));
+                detail.put("投喂量", feed.getFeedAmount() == null ? "-" : feed.getFeedAmount() + " kg");
+                detail.put("饲料单价", feed.getFeedUnitPrice() == null ? "-" : feed.getFeedUnitPrice() + " 元/kg");
+                detail.put("换水状态", blankToDash(feed.getWaterChangeStatus()));
+                detail.put("药品名称", blankToDash(feed.getMedicineName()));
+                detail.put("用药量", feed.getMedicineDosage() == null ? "-" : feed.getMedicineDosage() + " " + safe(feed.getMedicineUnit()));
+                detail.put("药费", feed.getMedicineAmount() == null ? "-" : feed.getMedicineAmount() + " 元");
+                nodes.add(traceNode("feed", "投喂与环境作业", feed.getLogDate() == null ? null : feed.getLogDate().atStartOfDay(), detail));
             }
-            detail.put("天气", p.getWeather());
-            detail.put("水温", p.getWaterTemp() != null ? p.getWaterTemp() + " °C" : "—");
-            detail.put("水色", p.getWaterColor());
-            detail.put("备注", p.getRemark() != null ? p.getRemark() : "—");
-            node.setDetail(detail);
-            nodes.add(node);
         }
 
-        // Node 6: Feed Logs (饲料投喂)
-        Set<Long> patrolLogIds = patrolLogs.stream().map(PatrolLog::getId)
-                .filter(Objects::nonNull).collect(Collectors.toSet());
-        List<PondFeedLog> relevantFeeds = new ArrayList<>();
-        if (!patrolLogIds.isEmpty()) {
-            relevantFeeds = pondFeedLogMapper.selectList(
-                    new LambdaQueryWrapper<PondFeedLog>()
-                            .in(PondFeedLog::getPatrolLogId, patrolLogIds)
-                            .orderByAsc(PondFeedLog::getLogDate));
-        }
-        for (PondFeedLog f : relevantFeeds) {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("feed");
-            node.setNodeName("饲料投喂记录");
-            node.setNodeTime(f.getLogDate() != null
-                    ? f.getLogDate().atStartOfDay() : null);
-            Map<String, Object> detail = new LinkedHashMap<>();
-            detail.put("投喂日期", f.getLogDate());
-            detail.put("饲料品牌", f.getFeedBrand());
-            detail.put("投喂量", f.getFeedAmount() != null ? f.getFeedAmount() + " kg" : "—");
-            detail.put("饲料单价", f.getFeedUnitPrice() != null ? f.getFeedUnitPrice() + " 元/kg" : "—");
-            if (f.getPondId() != null) {
-                Pond pond = pondMapper.selectById(f.getPondId());
-                detail.put("池塘", pond != null ? pond.getPondName() : "—");
-            }
-            detail.put("换水状态", f.getWaterChangeStatus() != null ? f.getWaterChangeStatus() : "—");
-            node.setDetail(detail);
-            nodes.add(node);
-        }
-
-        // Node 7: Harvest (出塘结算)
-        HarvestRecord harvest = harvestRecordMapper.selectOne(
-                new LambdaQueryWrapper<HarvestRecord>()
-                        .eq(HarvestRecord::getBatchNo, batch.getBatchNo())
-                        .eq(HarvestRecord::getIsDeleted, 0)
-                        .last("LIMIT 1"));
+        HarvestRecord harvest = harvestRecordMapper.selectOne(new LambdaQueryWrapper<HarvestRecord>()
+                .eq(HarvestRecord::getBatchNo, batch.getBatchNo())
+                .eq(HarvestRecord::getIsDeleted, 0)
+                .last("LIMIT 1"));
         if (harvest != null) {
-            TraceNodeVO node = new TraceNodeVO();
-            node.setNodeType("harvest");
-            node.setNodeName("出塘结算");
-            node.setNodeTime(harvest.getHarvestDate() != null
-                    ? harvest.getHarvestDate().atStartOfDay() : harvest.getCreateTime());
             Map<String, Object> detail = new LinkedHashMap<>();
+            Pond pond = harvest.getPondId() == null ? null : pondMapper.selectById(harvest.getPondId());
             detail.put("出塘日期", harvest.getHarvestDate());
-            if (harvest.getPondId() != null) {
-                Pond pond = pondMapper.selectById(harvest.getPondId());
-                detail.put("出塘池塘", pond != null ? pond.getPondName() : "—");
-            }
-            detail.put("实际总重", harvest.getActualTotalWeightKg() != null
-                    ? harvest.getActualTotalWeightKg() + " kg" : "—");
-            detail.put("均重", harvest.getActualAvgWeightG() != null
-                    ? harvest.getActualAvgWeightG() + " g/尾" : "—");
-            detail.put("单价", harvest.getUnitPrice() != null
-                    ? harvest.getUnitPrice() + " 元/kg" : "—");
-            detail.put("总收入", harvest.getTotalRevenue() != null
-                    ? harvest.getTotalRevenue() + " 元" : "—");
-            detail.put("净利润", harvest.getNetProfit() != null
-                    ? harvest.getNetProfit() + " 元" : "—");
-            detail.put("收购方", harvest.getBuyerName());
-            detail.put("结算状态", harvest.getSettlementStatus() != null
-                    && harvest.getSettlementStatus() == 1 ? "已结算" : "未结算");
-            node.setDetail(detail);
-            nodes.add(node);
+            detail.put("出塘池塘", pond == null ? "-" : pond.getPondName());
+            detail.put("实际总重", harvest.getActualTotalWeightKg() == null ? "-" : harvest.getActualTotalWeightKg() + " kg");
+            detail.put("实际均重", harvest.getActualAvgWeightG() == null ? "-" : harvest.getActualAvgWeightG() + " g/尾");
+            detail.put("收购方", blankToDash(harvest.getBuyerName()));
+            detail.put("单价", harvest.getUnitPrice() == null ? "-" : harvest.getUnitPrice() + " 元/kg");
+            detail.put("总收入", harvest.getTotalRevenue() == null ? "-" : harvest.getTotalRevenue() + " 元");
+            detail.put("总成本", harvest.getTotalCost() == null ? "-" : harvest.getTotalCost() + " 元");
+            detail.put("净利润", harvest.getNetProfit() == null ? "-" : harvest.getNetProfit() + " 元");
+            detail.put("结算状态", harvest.getSettlementStatus() != null && harvest.getSettlementStatus() == 1 ? "已结算" : "未结算");
+            nodes.add(traceNode("harvest", "出塘结算", harvest.getHarvestDate() == null ? harvest.getCreateTime() : harvest.getHarvestDate().atStartOfDay(), detail));
         }
 
-        // Sort nodes by time
-        nodes.sort(Comparator.nullsLast(
-                Comparator.comparing(TraceNodeVO::getNodeTime, Comparator.nullsLast(Comparator.naturalOrder()))));
-
+        nodes.sort(Comparator.comparing(TraceNodeVO::getNodeTime, Comparator.nullsLast(Comparator.naturalOrder())));
         chain.setNodes(nodes);
         return chain;
+    }
+    private TraceNodeVO traceNode(String type, String name, LocalDateTime time, Map<String, Object> detail) {
+        TraceNodeVO node = new TraceNodeVO();
+        node.setNodeType(type);
+        node.setNodeName(name);
+        node.setNodeTime(time);
+        node.setDetail(detail);
+        return node;
+    }
+
+    private int countRecentAbnormalDeaths(Long farmId, LocalDate since) {
+        List<Long> pondIds = pondMapper.selectList(new LambdaQueryWrapper<Pond>()
+                        .eq(Pond::getFarmId, farmId)
+                        .eq(Pond::getIsDeleted, 0))
+                .stream()
+                .map(Pond::getId)
+                .filter(Objects::nonNull)
+                .toList();
+        if (pondIds.isEmpty()) return 0;
+        return batchGrowthLogMapper.selectList(new LambdaQueryWrapper<BatchGrowthLog>()
+                        .in(BatchGrowthLog::getPondId, pondIds)
+                        .ge(BatchGrowthLog::getLogDate, since)
+                        .gt(BatchGrowthLog::getAbnormalDeathCount, 0))
+                .stream()
+                .mapToInt(item -> item.getAbnormalDeathCount() == null ? 0 : item.getAbnormalDeathCount())
+                .sum();
+    }
+
+    private long currentStockCount(Long farmId, List<Pond> ponds) {
+        Set<Long> pondIds = ponds.stream().map(Pond::getId).filter(Objects::nonNull).collect(Collectors.toSet());
+        if (pondIds.isEmpty()) return 0L;
+        List<PurchaseBatch> activeBatches = purchaseBatchMapper.selectList(new LambdaQueryWrapper<PurchaseBatch>()
+                .eq(PurchaseBatch::getFarmId, farmId)
+                .eq(PurchaseBatch::getBatchStatus, (byte) 2));
+        Set<Long> activeBatchIds = activeBatches.stream().map(PurchaseBatch::getId).filter(Objects::nonNull).collect(Collectors.toSet());
+        if (activeBatchIds.isEmpty()) return 0L;
+        return stockingMapper.selectList(new LambdaQueryWrapper<Stocking>()
+                        .in(Stocking::getPondId, pondIds)
+                        .in(Stocking::getBatchId, activeBatchIds)
+                        .eq(Stocking::getIsDeleted, 0))
+                .stream()
+                .mapToLong(item -> item.getStockedQty() == null ? 0L : item.getStockedQty())
+                .sum();
+    }
+
+    private String mainSpecies(Long farmId) {
+        return purchaseBatchMapper.selectList(new LambdaQueryWrapper<PurchaseBatch>()
+                        .eq(PurchaseBatch::getFarmId, farmId)
+                        .eq(PurchaseBatch::getBatchStatus, (byte) 2))
+                .stream()
+                .map(item -> seedlingName(item.getSeedlingId()))
+                .filter(item -> item != null && !item.isBlank())
+                .distinct()
+                .collect(Collectors.joining("、"));
+    }
+
+    private String seedlingName(Long seedlingId) {
+        if (seedlingId == null) return null;
+        SeedlingDict seedling = seedlingDictMapper.selectById(seedlingId);
+        return seedling == null ? null : seedling.getCategoryName();
+    }
+
+    private AlarmRecordVO toAlarmRecordVO(AlarmRecord record) {
+        AlarmRecordVO vo = new AlarmRecordVO();
+        vo.setId(record.getId());
+        vo.setFarmId(record.getFarmId());
+        vo.setPondId(record.getPondId());
+        vo.setRuleId(record.getRuleId());
+        vo.setAlarmCode(record.getAlarmCode());
+        vo.setTitle(record.getTitle());
+        vo.setMessage(record.getMessage());
+        vo.setSourceType(record.getSourceType());
+        vo.setSourceId(record.getSourceId());
+        vo.setSeverity(record.getSeverity());
+        vo.setStatus(record.getStatus());
+        vo.setMetricCode(record.getMetricCode());
+        vo.setTriggerValue(record.getTriggerValue());
+        vo.setThresholdOperator(record.getThresholdOperator());
+        vo.setThresholdValue(record.getThresholdValue());
+        vo.setThresholdValueHigh(record.getThresholdValueHigh());
+        vo.setMetricUnit(record.getMetricUnit());
+        vo.setOccurrenceCount(record.getOccurrenceCount());
+        vo.setFirstOccurredAt(record.getFirstOccurredAt());
+        vo.setLastOccurredAt(record.getLastOccurredAt());
+        vo.setAcknowledgedBy(record.getAcknowledgedBy());
+        vo.setAcknowledgedAt(record.getAcknowledgedAt());
+        vo.setResolvedBy(record.getResolvedBy());
+        vo.setResolvedAt(record.getResolvedAt());
+        vo.setResolutionRemark(record.getResolutionRemark());
+        vo.setRecoveredAt(record.getRecoveredAt());
+        vo.setCreatedAt(record.getCreatedAt());
+        vo.setUpdatedAt(record.getUpdatedAt());
+        Farm farm = record.getFarmId() == null ? null : farmMapper.selectById(record.getFarmId());
+        Pond pond = record.getPondId() == null ? null : pondMapper.selectById(record.getPondId());
+        if (farm != null) vo.setFarmName(farm.getFarmName());
+        if (pond != null) vo.setPondName(pond.getPondName());
+        return vo;
+    }
+
+    private void addIotAlertIfNeeded(List<IotRealtimeAlertVO> result, Pond pond, Farm farm, IotSensorData data,
+                                     String field, BigDecimal value, BigDecimal min, BigDecimal max) {
+        if (value == null) return;
+        boolean tooLow = min != null && value.compareTo(min) < 0;
+        boolean tooHigh = max != null && value.compareTo(max) > 0;
+        if (!tooLow && !tooHigh) return;
+        IotRealtimeAlertVO vo = new IotRealtimeAlertVO();
+        vo.setPondId(pond.getId());
+        vo.setPondName(pond.getPondName());
+        vo.setFarmId(pond.getFarmId());
+        vo.setFarmName(farm == null ? null : farm.getFarmName());
+        vo.setWaterTemp(data.getWaterTemp());
+        vo.setDoLevel(data.getDissolvedOxygen());
+        vo.setPhLevel(data.getPhValue());
+        vo.setAlertField(field);
+        vo.setCurrentValue(value);
+        vo.setThresholdMin(min);
+        vo.setThresholdMax(max);
+        vo.setDataTime(data.getCollectTime());
+        result.add(vo);
     }
 
     private static String batchStatusLabel(Byte status) {
@@ -581,21 +565,21 @@ public class RegulatorServiceImpl implements IRegulatorService {
         };
     }
 
-    /**
-     * 从地址或养殖场名称中提取省份信息
-     */
+    private static String safe(Object value) {
+        return value == null ? "-" : String.valueOf(value);
+    }
+
+    private static String blankToDash(String value) {
+        return value == null || value.isBlank() ? "-" : value;
+    }
+
     private static String extractProvince(String address, String farmName) {
-        String combined = (address != null ? address : "") + (farmName != null ? farmName : "");
+        String combined = (address == null ? "" : address) + (farmName == null ? "" : farmName);
         for (String province : PROVINCE_NAMES) {
-            if (combined.contains(province)) {
-                return province;
-            }
+            if (combined.contains(province)) return province;
         }
-        // 尝试匹配简称
         for (String[] pair : PROVINCE_SHORT_MAP) {
-            if (combined.contains(pair[0])) {
-                return pair[1];
-            }
+            if (combined.contains(pair[0])) return pair[1];
         }
         return null;
     }
@@ -604,16 +588,27 @@ public class RegulatorServiceImpl implements IRegulatorService {
             "广东省", "山东省", "江苏省", "浙江省", "福建省", "海南省", "辽宁省",
             "广西壮族自治区", "河北省", "河南省", "湖北省", "湖南省", "四川省",
             "安徽省", "江西省", "云南省", "贵州省", "山西省", "陕西省", "甘肃省",
-            "吉林省", "黑龙江省", "青海省", "台湾省",
-            "内蒙古自治区", "西藏自治区", "宁夏回族自治区", "新疆维吾尔自治区",
-            "北京市", "天津市", "上海市", "重庆市",
+            "吉林省", "黑龙江省", "青海省", "台湾省", "内蒙古自治区", "西藏自治区",
+            "宁夏回族自治区", "新疆维吾尔自治区", "北京市", "天津市", "上海市", "重庆市",
             "香港特别行政区", "澳门特别行政区"
     );
 
     private static final String[][] PROVINCE_SHORT_MAP = {
-            {"广西", "广西壮族自治区"}, {"内蒙古", "内蒙古自治区"}, {"西藏", "西藏自治区"},
-            {"宁夏", "宁夏回族自治区"}, {"新疆", "新疆维吾尔自治区"},
-            {"北京", "北京市"}, {"天津", "天津市"}, {"上海", "上海市"}, {"重庆", "重庆市"},
-            {"香港", "香港特别行政区"}, {"澳门", "澳门特别行政区"}
+            {"广东", "广东省"}, {"山东", "山东省"}, {"江苏", "江苏省"}, {"浙江", "浙江省"},
+            {"福建", "福建省"}, {"海南", "海南省"}, {"辽宁", "辽宁省"}, {"广西", "广西壮族自治区"},
+            {"河北", "河北省"}, {"河南", "河南省"}, {"湖北", "湖北省"}, {"湖南", "湖南省"},
+            {"四川", "四川省"}, {"安徽", "安徽省"}, {"江西", "江西省"}, {"云南", "云南省"},
+            {"贵州", "贵州省"}, {"山西", "山西省"}, {"陕西", "陕西省"}, {"甘肃", "甘肃省"},
+            {"吉林", "吉林省"}, {"黑龙江", "黑龙江省"}, {"青海", "青海省"}, {"台湾", "台湾省"},
+            {"内蒙古", "内蒙古自治区"}, {"西藏", "西藏自治区"}, {"宁夏", "宁夏回族自治区"},
+            {"新疆", "新疆维吾尔自治区"}, {"北京", "北京市"}, {"天津", "天津市"},
+            {"上海", "上海市"}, {"重庆", "重庆市"}, {"香港", "香港特别行政区"}, {"澳门", "澳门特别行政区"}
     };
+    private static boolean isActiveStatus(Byte status) {
+        return status != null && (status == 0 || status == 1 || status == 2);
+    }
+
+    private static BigDecimal bd(String value) {
+        return new BigDecimal(value);
+    }
 }
